# shop_drf

./: pyproject.toml
data/: categories.py  products.py
data_access/: curls.txt
shop_app/: admin.py  models.py  services.py  urls.py  views.py
shop_app/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py
shop_drf/: settings.py  urls.py
users_app/: services.py  urls.py  views.py
